Java 21 improvements